ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
06/05/09 Daniel K. O.

		* Removed aliasing issues from OPCODE/Ice, plus some other warnings.
		  Now it builds on gcc 4.3.2 with '-Wall -Werror -O3".

05/30/09 Oleh Derevenko

		* A minor memory usage optimization for QuickStep.

05/24/09 Daniel K. O.

		* Made the new trimesh collider the default.
		* Added a "-texturepath" option to drawstuff.

05/18/09 Oleh Derevenko

		* Heightfield rotation fixed to avoid NaNs while rotating infinite 
		  MIN/MAX heights.

05/03/09 Oleh Derevenko

		* Incorrect parameter order fixed on contact merging in Sphere-Trimesh
		  collisions. The bug resulted in merged contact remaining with normal 
		  of first contact found. Thanks to Dimitris Papavasiliou for reporting.

04/23/09 Daniel K. O.
        * Fixed bug #2685170: use the C99 __func__ instead of __FUNCTION__ when
          a C99 implementation is available.

04/07/09 Remi Ricard (papaDoc)
        * Remove unused code in demo_joints.cpp, reported by Tilmann.

04/07/09 Remi Ricard (papaDoc)
        * Fix bug in collision categories in demo_jointPU, reported by Tilmann

03/14/09 Oleh Derevenko
        * A possibility to initialize/close ODE multiple times recursively has 
          been added.
          Also, now a call to dSpaceSetManualCleanup() is required for each 
          space right after creation if ODE has been initialized in thread data
          manual cleanup mode.
           
03/07/09 Oleh Derevenko
        * Thread local data has been cleaned up from OPCODE and OdeTls as it is
          not used (OPC_SweepAndPrune.* and OPC_BoxPruning.* have been removed
          - rebuilding project files is necessary).
